refactor(VendingMachineCoins): toCoinQuantities, updateCoinQuantities, addCoinQuantities 메서드 분리